[package]
name = "thruster-grpc"
version = "0.1.0"
authors = ["Pete Mertz <peter.s.mertz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bytes = "1.0.1"
futures = "0.3.5"
http = "0.2.4"
http-body = "0.4.4"
lazy_static = "1.4.0"
log = "0.4"
hyper = { version = "0.14.8", features = ["http1", "http2", "runtime", "server", "stream"] }
prost = "0.10.0"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
thruster = { version = "1.2.2", features = ["hyper_server"]}
tokio = { version = "0.2.19", features = ["full"] }

[build-dependencies]
tonic-build = { version = "0.2", features = ["prost"] }
