[package]
name = "hello-world"
version = "0.1.0"
authors = ["Pete Mertz <peter.s.mertz@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
dotenv = "0.13.0"
env_logger = "0.7.1"
log = "0.4"
hyper = { version = "0.14.8", features = ["http1", "http2", "runtime", "server", "stream"] }
http = "0.2"
http-body = "0.3.1"
prost = "0.10.0"
thruster = { version = "1.2.2", features = ["hyper_server"]}
thruster-grpc = { path = "../../" }

[build-dependencies]
prost-build = "0.6"
